--- a/index.html
+++ b/index.html
@@ -17,5 +17,12 @@
 				</nav>
 			</div>
 		</header>
+		<main class="main">
+			<div class="content">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ducimus quisquam, porro nulla nobis ipsam, mollitia error, commodi voluptates expedita autem distinctio? Debitis atque beatae maxime. Veritatis reiciendis eaque eum!</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ducimus quisquam, porro nulla nobis ipsam, mollitia error, commodi voluptates expedita autem distinctio? Debitis atque beatae maxime. Veritatis reiciendis eaque eum!</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ducimus quisquam, porro nulla nobis ipsam, mollitia error, commodi voluptates expedita autem distinctio? Debitis atque beatae maxime. Veritatis reiciendis eaque eum!</p>
+			</div>
+		</main>
 	</body>
 </html>
