Updated containers for html content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="style.css" rel="stylesheet" media="all" />
+		<link href="css/style.css" rel="stylesheet" media="all" />
 	</head>
 	<body>
 		<header class="header">
@@ -19,9 +19,15 @@
 		</header>
 		<main class="main">
 			<div class="content">
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ducimus quisquam, porro nulla nobis ipsam, mollitia error, commodi voluptates expedita autem distinctio? Debitis atque beatae maxime. Veritatis reiciendis eaque eum!</p>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ducimus quisquam, porro nulla nobis ipsam, mollitia error, commodi voluptates expedita autem distinctio? Debitis atque beatae maxime. Veritatis reiciendis eaque eum!</p>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ducimus quisquam, porro nulla nobis ipsam, mollitia error, commodi voluptates expedita autem distinctio? Debitis atque beatae maxime. Veritatis reiciendis eaque eum!</p>
+				<div class="text">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ducimus quisquam, porro nulla nobis ipsam, mollitia error, commodi voluptates expedita autem distinctio? Debitis atque beatae maxime. Veritatis reiciendis eaque eum!</p>
+				</div>
+				<div class="text">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ducimus quisquam, porro nulla nobis ipsam, mollitia error, commodi voluptates expedita autem distinctio? Debitis atque beatae maxime. Veritatis reiciendis eaque eum!</p>
+				</div>
+				<div class="text">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ducimus quisquam, porro nulla nobis ipsam, mollitia error, commodi voluptates expedita autem distinctio? Debitis atque beatae maxime. Veritatis reiciendis eaque eum!</p>
+				</div>
 			</div>
 		</main>
 	</body>
